js/js.translator/testData/incremental/invalidation/circleInlineImportsUpdate/lib1/f3.kt
inline fun f3_2() = "f3_2 -> ${f1_3()}"

inline fun f3_3() = "f3_3 -> ${f1_4()}"
